--- a/sass/fix.scss
+++ b/sass/fix.scss
@@ -19,3 +19,14 @@ $selection_color: #fff;
 ::selection {
     @extend %default_selection;
 }
+
+/* Fix bold issues with Edge12+, Safari 6.2+, and Chrome 18+ */
+b,
+strong {
+    font-weight: bolder;
+}
+
+textarea {
+  overflow: auto; /* Internet Explorer 11+ */
+  resize: vertical; /* Specify textarea resizability */
+}
